--- a/POSVTAV2/index.html
+++ b/POSVTAV2/index.html
@@ -249,6 +249,51 @@
 <!-- 📦 Librería PDF -->
 <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 
+<!-- 📷 Control de escáner QR -->
+<script>
+window.addEventListener("load", () => {
+  const btnCam = document.getElementById("btnCam");
+  const camDiv = document.getElementById("qrReaderContainer");
+  const cerrarCam = document.getElementById("cerrarCam");
+  let html5QrCode = null;
+
+  btnCam.addEventListener("click", () => {
+    camDiv.style.display = "flex";
+    const readerDiv = document.getElementById("reader");
+    if (!readerDiv) {
+      alert("No se encontró el contenedor del lector (#reader)");
+      return;
+    }
+
+    html5QrCode = new Html5Qrcode("reader");
+    html5QrCode.start(
+      { facingMode: "environment" },
+      { fps: 10, qrbox: 250 },
+      (decodedText) => {
+        console.log("📦 Código detectado:", decodedText);
+        const buscador = document.getElementById("buscador");
+        buscador.value = decodedText;
+        camDiv.style.display = "none";
+        html5QrCode.stop().then(() => {
+          const enterEvent = new KeyboardEvent("keydown", { key: "Enter" });
+          buscador.dispatchEvent(enterEvent);
+        });
+      },
+      (errorMessage) => console.log("⚠️", errorMessage)
+    ).catch((err) => {
+      alert("No se pudo abrir la cámara: " + err);
+      camDiv.style.display = "none";
+    });
+  });
+
+  cerrarCam.addEventListener("click", () => {
+    if (html5QrCode) html5QrCode.stop().then(() => camDiv.style.display = "none");
+    else camDiv.style.display = "none";
+  });
+});
+</script>
+
+
 <!-- Tu script principal de Firebase -->
 <script type="module">
   
@@ -650,6 +695,20 @@ const elCant = document.getElementById("cantidadInput");
     else{carrito.push({...prod,cantidad:cant,precioUnit:precio,importe:cant*precio});}
     render();
   }
+function decodificarCodigoBalanza(codigo) {
+  // Ejemplo: 2000016001105
+  if (!codigo || codigo.length < 13) return null;
+  if (!codigo.startsWith("2")) return null;
+  const base = codigo.substring(1, 7).replace(/^0+/, ""); // ← quitar ceros a la izquierda
+  const pesoStr = codigo.substring(7, 12);
+  const peso = parseFloat(pesoStr) / 1000;
+  return { base, peso };
+}
+
+function buscarLocal(qraw) {
+  const q = (qraw || "").trim();
+  if (!q) return [];
+
   // 🧩 Detección de código de balanza
 function decodificarCodigoBalanza(codigo) {
   // Ejemplo: 2000004245603
@@ -1483,6 +1542,12 @@ Cajero : ${venta.atendio || "—"}
       <div class="t-thanks" style="text-align:center; margin-top:8px; font-size:12px;">¡Gracias por su compra!</div>
     </div>
 </div>
+<!-- 🔹 Contenedor oculto para cámara -->
+<div id="qrReaderContainer" style="display:none; flex-direction:column; align-items:center; justify-content:center; position:fixed; inset:0; background:rgba(0,0,0,.8); z-index:3000;">
+  <div id="reader" style="width:90%; max-width:360px; margin:auto; background:#fff; border-radius:12px; padding:8px;"></div>
+  <button id="cerrarCam" class="btn" style="margin-top:12px;background:#c0392b;">Cerrar cámara</button>
+</div>
+
 <script>
 if ("serviceWorker" in navigator) {
   navigator.serviceWorker.register("./sw.js")
@@ -1522,53 +1587,6 @@ document.addEventListener("DOMContentLoaded", () => {
     });
   }
 </script>
-<!-- 🔹 Contenedor oculto para cámara -->
-<div id="qrReaderContainer" style="display:none;flex-direction:column;align-items:center;justify-content:center;position:fixed;inset:0;background:rgba(0,0,0,.8);z-index:3000;">
-  <div id="reader" style="width:90%;max-width:360px;margin:auto;background:#fff;border-radius:12px;padding:8px;"></div>
-  <button id="cerrarCam" class="btn" style="margin-top:12px;background:#c0392b;">Cerrar cámara</button>
-</div>
 
-<!-- 📸 Librería QR -->
-<script src="./html5-qrcode.min.js"></script>
-
-<!-- 📷 Control funcional -->
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const btnCam = document.getElementById("btnCam");
-  const camDiv = document.getElementById("qrReaderContainer");
-  const cerrarCam = document.getElementById("cerrarCam");
-  const readerDiv = document.getElementById("reader");
-  let html5QrCode = null;
-
-  btnCam.addEventListener("click", async () => {
-    if (!navigator.mediaDevices?.getUserMedia) {
-      alert("Tu dispositivo no permite acceso a la cámara.");
-      return;
-    }
-    camDiv.style.display = "flex";
-    html5QrCode = new Html5Qrcode("reader");
-    try {
-      await html5QrCode.start(
-        { facingMode: "environment" },
-        { fps: 10, qrbox: 250 },
-        decodedText => {
-          document.getElementById("buscador").value = decodedText;
-          html5QrCode.stop().then(() => camDiv.style.display = "none");
-          const ev = new KeyboardEvent("keydown", { key: "Enter" });
-          document.getElementById("buscador").dispatchEvent(ev);
-        }
-      );
-    } catch (err) {
-      alert("No se pudo iniciar cámara: " + err);
-      camDiv.style.display = "none";
-    }
-  });
-
-  cerrarCam.addEventListener("click", async () => {
-    if (html5QrCode) await html5QrCode.stop();
-    camDiv.style.display = "none";
-  });
-});
-</script>
 </body>
 </html>
