--- a/POSVTAV2/index.html
+++ b/POSVTAV2/index.html
@@ -243,8 +243,6 @@
 
   </main>
 </div>
-<!-- 📸 Librería QR -->
-<script src="./html5-qrcode.min.js"></script>
 
 <!-- 📦 Librería PDF -->
 <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
@@ -651,10 +649,9 @@ const elCant = document.getElementById("cantidadInput");
     render();
   }
 function decodificarCodigoBalanza(codigo) {
-  // Ejemplo: 2000016001105
-  if (!codigo || codigo.length < 13) return null;
-  if (!codigo.startsWith("2")) return null;
-  const base = codigo.substring(1, 7).replace(/^0+/, ""); // ← quitar ceros a la izquierda
+  // 🧠 Estructura esperada: 20 + 5 dígitos producto + 5 dígitos peso + 1 verificador
+  if (!codigo || codigo.length !== 13 || !codigo.startsWith("20")) return null;
+  const base = codigo.substring(2, 7).replace(/^0+/, ""); // producto base
   const pesoStr = codigo.substring(7, 12);
   const peso = parseFloat(pesoStr) / 1000;
   return { base, peso };
@@ -664,23 +661,21 @@ function buscarLocal(qraw) {
   const q = (qraw || "").trim();
   if (!q) return [];
 
-  // 🧩 Detección de código de balanza
+  // 🧩 Código de balanza
   const bal = decodificarCodigoBalanza(q);
   if (bal) {
-    console.log("Código de balanza detectado:", bal);
-   const posibles = [
-  bal.base,
-  bal.base.padStart(6, "0"),
-  ("000000" + bal.base).slice(-6),
-  "2" + bal.base.padStart(6, "0"),
-  "20000" + bal.base   // 🔥 esta línea agrega compatibilidad con tus equivalentes reales
-];
+    console.log("Código balanza detectado:", bal);
+    const posibles = [
+      bal.base,
+      bal.base.padStart(5, "0"),
+      "20" + bal.base.padStart(5, "0"),
+      "20000" + bal.base
+    ];
 
-    // Buscar en codeIndex y equivalentes
     for (const key of posibles) {
       const prodId =
         codeIndex.get(key) ||
-        catalogo.find(p => (p.equivalentes || []).some(eq => eq === key))?.id;
+        catalogo.find(p => (p.equivalentes || []).includes(key))?.id;
 
       if (prodId) {
         const p = catalogo.find(x => x.id === prodId);
@@ -692,25 +687,25 @@ function buscarLocal(qraw) {
     }
   }
 
-  // 🔎 Búsqueda por código exacto o equivalente
+  // 🔍 Búsqueda normal
   const idByCode = codeIndex.get(q);
   if (idByCode) {
     const p = catalogo.find(x => x.id === idByCode);
     return p ? [p] : [];
   }
 
-  // 🔍 Buscar en equivalentes parciales
+  // Buscar en equivalentes
   const matchEq = catalogo.find(p =>
     (p.equivalentes || []).some(eq => q.includes(eq))
   );
   if (matchEq) return [matchEq];
 
-  // 🔠 Buscar por nombre
+  // Por nombre
   return catalogo.filter(p =>
     (p.nombre || "").toLowerCase().includes(q.toLowerCase())
   );
 }
-  function pintarResultados(hits){
+function pintarResultados(hits){
     elResultados.innerHTML=""; if(hits.length===0){elResultados.style.display="none";return;}
     elResultados.style.display="block";
     hits.forEach(p=>{
@@ -1481,11 +1476,6 @@ Cajero : ${venta.atendio || "—"}
       <div class="t-thanks" style="text-align:center; margin-top:8px; font-size:12px;">¡Gracias por su compra!</div>
     </div>
 </div>
-<!-- 🔹 Contenedor oculto para cámara -->
-<div id="qrReaderContainer" style="display:none; flex-direction:column; align-items:center; justify-content:center; position:fixed; inset:0; background:rgba(0,0,0,.8); z-index:3000;">
-  <div id="reader" style="width:90%; max-width:360px; margin:auto; background:#fff; border-radius:12px; padding:8px;"></div>
-  <button id="cerrarCam" class="btn" style="margin-top:12px;background:#c0392b;">Cerrar cámara</button>
-</div>
 
 <script>
 if ("serviceWorker" in navigator) {
@@ -1517,15 +1507,6 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 
-</script>
-<script src="app.js"></script>
-<script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('./sw.js').then(() => {
-      console.log('✅ Service Worker activo');
-    });
-  }
-</script>
 <!-- 🔹 Contenedor oculto para cámara -->
 <div id="qrReaderContainer" style="display:none;flex-direction:column;align-items:center;justify-content:center;position:fixed;inset:0;background:rgba(0,0,0,.8);z-index:3000;">
   <div id="reader" style="width:90%;max-width:360px;margin:auto;background:#fff;border-radius:12px;padding:8px;"></div>
