--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <a href="POSVTAV2/MAPARUTACORTA.html">🔎 Trazado de Rutas </a>
   </div>
   <div class="apps">
-    <a href="POSMOVIL/RETICKES.html">🔎 Retickets </a>
+    <a href="POSMOVIL/monitor_ventas_ruta_movil.html">🔎 Visor de tickets </a>
   </div>
   <div class="apps">
     <a href="POSVTAV2/index.html">🔎 POS MOVIL V2</a>
