--- a/POSVTAV2/monitor_ventas_ruta_movil.html
+++ b/POSVTAV2/monitor_ventas_ruta_movil.html
@@ -130,17 +130,17 @@
   </div>
 
   <script>
-const firebaseConfig = {
-  apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
-  authDomain: "inventariopv-643f1.firebaseapp.com",
-  projectId: "inventariopv-643f1",
-  storageBucket: "inventariopv-643f1.firebasestorage.app",
-  messagingSenderId: "96242533231",
-  appId: "1:96242533231:web:aae75a18fbaf9840529e9a"
-};
+    // ✅ Inicialización correcta (Firebase Compat)
+    const firebaseConfig = {
+      apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
+      authDomain: "inventariopv-643f1.firebaseapp.com",
+      projectId: "inventariopv-643f1",
+      storageBucket: "inventariopv-643f1.firebasestorage.app",
+      messagingSenderId: "96242533231",
+      appId: "1:96242533231:web:aae75a18fbaf9840529e9a"
+    };
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
+    firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
     const tablaBody = document.querySelector("#tablaVentas tbody");
@@ -155,7 +155,7 @@ const app = initializeApp(firebaseConfig);
       const fecha = fechaInput.value;
       let query = db.collection("rutas_venta");
 
-      // Ordena por hora o timestamp (más recientes arriba)
+      // Ordena por campo createdAt descendente (recientes arriba)
       query = query.orderBy("createdAt", "desc");
 
       const snapshot = await query.get();
@@ -165,12 +165,10 @@ const app = initializeApp(firebaseConfig);
       snapshot.forEach((doc) => {
         const data = doc.data();
 
-        // Si hay filtro por fecha
         if (!fecha || data.fecha === fecha) {
           const total = parseFloat(data.total || 0);
           totalGeneral += total;
 
-          // Muestra hora si existe campo createdAt
           let fechaHora = "";
           if (data.createdAt && data.createdAt.toDate) {
             const d = data.createdAt.toDate();
@@ -217,7 +215,6 @@ const app = initializeApp(firebaseConfig);
       }
     }
 
-    // 📅 Eventos
     fechaInput.addEventListener("change", cargarVentas);
 
     // 🚀 Cargar todas al inicio
