--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
   <div class="apps">
     <a href="POSVTAV2/MAPARUTACORTA.html">🔎 Trazado de Rutas </a>
   </div>
-  <div class="apps">
-    <a href="POSMOVIL/monitor_ventas_ruta_movil.html">🔎 Visor de tickets </a>
-  </div>
+<div class="apps">
+  <a href="POSVTAV2/monitor_ventas_ruta_movil.html">🔎 Monitor Ventas Ruta Móvil V2</a>
+</div>
   <div class="apps">
     <a href="POSVTAV2/index.html">🔎 POS MOVIL V2</a>
   </div>
