--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
   <div class="apps">
     <a href="POSVTAV2/cortes_pendientes2.html">🔎 CORTES PENDIENTES V2 </a>
   </div>
+  <div class="apps">
+    <a href="POSMOVIL/POS_RUTA_PROVSOFT_V3_DESC.html">POS MÓVIL 3.0</a>
+  </div>
+
+
   
   <footer>
     Powered by <b>PROVSOFT</b>
