--- a/index.html
+++ b/index.html
@@ -47,31 +47,36 @@
 </head>
 <body>
   <h1>📱 PROVSOFT – Menú de Apps</h1>
+
   <div class="apps">
     <a href="ARTPDDPWA/index.html">🔎 Buscador de Artículos</a>
-    <!-- Aquí irán más enlaces cuando agregues otras apps -->
   </div>
+
   <div class="apps">
     <a href="POSMOVIL/index.html">🔎 POS MOVIL</a>
   </div>
+
   <div class="apps">
-    <a href="POSVTAV2/MAPARUTACORTA.html">🔎 Trazado de Rutas </a>
+    <a href="POSVTAV2/MAPARUTACORTA.html">🔎 Trazado de Rutas</a>
   </div>
-<div class="apps">
-  <a href="POSVTAV2/monitor_ventas_ruta_movil.html">🔎 Monitor Ventas Ruta Móvil V2</a>
-</div>
+
+  <div class="apps">
+    <a href="POSVTAV2/monitor_ventas_ruta_movil.html">🔎 Monitor Ventas Ruta Móvil V2</a>
+  </div>
+
   <div class="apps">
     <a href="POSVTAV2/index.html">🔎 POS MOVIL V2</a>
   </div>
+
   <div class="apps">
-    <a href="POSVTAV2/cortes_pendientes2.html">🔎 CORTES PENDIENTES V2 </a>
-  </div>
-  <div class="apps">
-    <a href="POSMOVIL/POS_RUTA_PROVSOFT_V3_DESC.html">POS MÓVIL 3.0</a>
+    <a href="POSVTAV2/cortes_pendientes2.html">🔎 CORTES PENDIENTES V2</a>
   </div>
 
+  <div class="apps">
+    <!-- ✅ Nueva ruta correcta al POS 3.0 con descuento -->
+    <a href="POSTVTA3/POS_RUTA_PROVSOFT_V3_DESC.html">🚀 POS MÓVIL 3.0 DESCUENTO LIBRE</a>
+  </div>
 
-  
   <footer>
     Powered by <b>PROVSOFT</b>
   </footer>
